plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'hello'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// JPA, 스프링 데이터 JPA 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// MyBatis 추가
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Thymeleaf Layout Dialect 추가
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.0.0'

	// Test 의존성 추가
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:5.5.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//Querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'

	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0' // 또는 최신 버전
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	/*Apache POI 라이브러리*/
	implementation 'org.apache.poi:poi-ooxml:5.2.3'


}

tasks.named('test') {
	useJUnitPlatform()
}

sourceSets {
	main {
		java {
			srcDirs = ["src/main/java", "build/generated/sources/annotationProcessor/java/main"]
		}
	}
}
